Fixed video z-index

--- a/css/video.css
+++ b/css/video.css
@@ -6,6 +6,7 @@
 }
 
 #single aside{
+  z-index: 16;
   position: absolute;
   height: 100vh;
   width: 33%;
@@ -23,6 +24,7 @@
 #single video{
   width:100%;
   height:100%;
+  z-index: 8;
 }
 .title{
   font-weight: 700;
